--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,10 +7,18 @@
     tools:context=".forhealthprofessional.Dashboard"
     android:background="@drawable/background">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/signout"
+        android:layout_width="36dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/logout"
+        android:layout_alignParentRight="true"/>
+
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="100dp"
         android:columnCount="2"
         android:rowCount="3">
