--- a/app/src/main/res/layout/fragment_patient_appointment_status.xml
+++ b/app/src/main/res/layout/fragment_patient_appointment_status.xml
@@ -6,10 +6,11 @@
     tools:context=".forpatient.fragments.PatientAppointmentStatus">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Appointment Status" />
+        android:layout_marginTop="47dp"
+        android:background="@drawable/btn_bg"/>
 
 </RelativeLayout>
