--- a/app/src/main/res/layout/fragment_patient_request.xml
+++ b/app/src/main/res/layout/fragment_patient_request.xml
@@ -6,10 +6,60 @@
     tools:context=".forpatient.fragments.PatientRequest">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Request Appointment" />
+        android:orientation="vertical"
+        android:layout_marginTop="47dp">
 
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:ems="10"
+            android:hint="Name:"
+            android:inputType="text"
+           />
+
+        <EditText
+            android:id="@+id/purpose"
+            android:layout_width="match_parent"
+            android:layout_height="236dp"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="Purpose:"
+            android:inputType="textMultiLine" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/date"
+                android:layout_width="180dp"
+                android:layout_height="48dp"
+                android:hint="Select Date"
+                android:layout_marginStart="10dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/time"
+                android:layout_width="180dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="30dp"
+                android:hint="Select Time" />
+        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/request"
+            android:layout_width="180dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginStart="120dp"
+            android:text="Request"
+            android:textColor="@color/white"
+            android:background="@drawable/btn_darkbg"/>
+
+    </LinearLayout>
 </RelativeLayout>
