--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,6 +88,7 @@
 
     <TextView
         android:id="@+id/register"
+        android:visibility="visible"
         android:textSize="15sp"
         android:gravity="center"
         android:layout_marginTop="30dp"
